server/src/main/java/com/example/scienceops/common/error/NotFoundException.java
package com.example.scienceops.common.error;

public class NotFoundException extends RuntimeException {

    public NotFoundException(String message) {
        super(message);
    }
}
